--- a/registration.html
+++ b/registration.html
@@ -81,7 +81,7 @@
 			</button>	
             <form class="form-inline" action="">
                 <input class="form-control mr-sm-2" type="text" placeholder="Поиск по сайту">
-                <button type="button" class="btn btn-outline-info">Найти</button>
+                <button type="submit" class="btn btn-outline-info">Найти</button>
 			</form>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
